// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event Analysis Builder render 1`] = `
<div>
  <div
    class="d-flex event-analysis-builder-root flex-column"
  >
    <div
      class="align-items-center d-flex event-section-root"
    >
      <div
        class="section-header"
      >
        Analyze
      </div>
      <div
        class="d-flex event-container justify-content-between"
      >
        <div
          class="event-list"
        />
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Add"
            class="dropdown-toggle add-event-button button-root btn btn-sm btn-primary"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-plus icon-root"
              role="presentation"
            >
              <use
                href="#plus"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="align-items-center attribute-breakdown-section-root d-flex"
    >
      <div
        class="section-header"
      >
        Breakdown
      </div>
    </div>
    <div
      class="align-items-center attribute-filter-section-root d-flex"
    >
      <div
        class="section-header"
      >
        Filter
      </div>
    </div>
  </div>
</div>
`;

exports[`Event Analysis Builder render with filters & breakdowns 1`] = `
<div>
  <div
    class="d-flex event-analysis-builder-root flex-column"
  >
    <div
      class="align-items-center d-flex event-section-root"
    >
      <div
        class="section-header"
      >
        Analyze
      </div>
      <div
        class="d-flex event-container justify-content-between"
      >
        <div
          class="event-list"
        >
          <div
            class="dropdown"
          >
            <div
              class="chip-root d-flex align-items-center justify-content-between event-chip-root"
            >
              <button
                class="button-root event-name btn btn-unstyled"
                type="button"
              >
                Article Views
              </button>
              <button
                aria-label="Close"
                class="button-root remove-button btn btn-unstyled"
                type="button"
              >
                <svg
                  class="lexicon-icon lexicon-icon-times-circle icon-root"
                  role="presentation"
                >
                  <use
                    href="#times-circle"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="align-items-center attribute-breakdown-section-root d-flex"
    >
      <div
        class="section-header"
      >
        Breakdown
      </div>
      <div
        class="align-items-center attribute-container d-flex justify-content-between"
      >
        <div
          class="align-items-center attribute-list d-flex"
        />
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Add"
            class="dropdown-toggle add-attribute button-root btn btn-outline-borderless btn-sm btn-outline-secondary"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-plus icon-root"
              role="presentation"
            >
              <use
                href="#plus"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="align-items-center attribute-filter-section-root d-flex"
    >
      <div
        class="section-header"
      >
        Filter
      </div>
      <div
        class="align-items-center attribute-container d-flex justify-content-between"
      >
        <div
          class="align-items-center attribute-list d-flex"
        />
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Add"
            class="dropdown-toggle add-attribute button-root btn btn-outline-borderless btn-sm btn-outline-secondary"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-plus icon-root"
              role="presentation"
            >
              <use
                href="#plus"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
